# mini-agent-telemetry-lab

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  README.md  demo_agent.py  demo_tools.py  docker-compose.yml  justfile  manage.py  pyproject.toml  pytest.ini  raw_sdk_agent.py
.github/workflows/: ci.yml
core/: admin.py  hooks.py  metrics.py  models.py  serializers.py  tasks.py  tests.py  types.py  urls.py  validators.py  views.py
core/evaluation/prompts/: v1.py  v2.py
core/management/commands/: demo_summary.py  eval_pending.py  verify_data.py
core/middleware/: request_id.py
core/migrations/: 0001_initial.py  0002_idempotencykey_evaluation_prompt_version_and_more.py  0003_remove_span_span_end_after_start_and_more.py  0004_metriccounter.py  0005_evaluation_lifecycle_fields_and_metric_seeds.py
core/providers/: base.py  factory.py  openai.py
core/services/: exceptions.py  finalization.py  ingestion.py
core/templates/core/: base.html  run_detail.html  run_list.html
core/templates/core/partials/: span_row.html
docs/: SECURITY.md
scripts/: __init__.py  demo_agent.py  demo_agent_msft.py  demo_tools.py  raw_sdk_agent.py  raw_sdk_technical_agent.py
sdk/: __init__.py  tracer.py  types.py
sdk/backends/: base.py  console.py  http.py
telemetry_lab/: asgi.py  logging_config.py  settings.py  test_settings.py  urls.py  wsgi.py
tests/: test_contract_stability.py  test_contracts.py  test_demo_summary.py  test_demo_tools.py  test_evaluation.py  test_evaluation_observability.py  test_failure_modes.py  test_failure_tolerance.py  test_ingest_semantics.py  test_ingestion.py  test_integration.py  test_lifecycle.py  test_metrics.py  test_properties.py  test_providers.py  test_sdk_tracer.py  test_settings_contract.py
