[project]
name = "mini-agent-telemetry-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.5.14",
    "ddgs>=9.13.0",
    "dj-database-url>=3.1.2",
    "django>=6.0.4",
    "djangorestframework>=3.17.1",
    "httpx>=0.28.1",
    "huey>=2.6.0",
    "openai>=2.30.0",
    "peewee>=4.0.4",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "python-dotenv>=1.2.2",
    "yfinance>=1.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
