[project]
name = "mini-agent-telemetry-lab"
version = "0.1.0"
description = "A backend observability system that turns opaque LLM-agent behavior into traceable execution data and scoreable quality signals."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["observability", "telemetry", "llm", "backend", "django"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Programming Language :: Python :: 3.12"
]
authors = [
    { name = "Aluizio Lira", email = "alumlira@gmail.com" }
]
dependencies = [
    "agno>=2.5.14",
    "ddgs>=9.13.0",
    "dj-database-url>=3.1.2",
    "django>=6.0.4",
    "djangorestframework>=3.17.1",
    "httpx>=0.28.1",
    "huey>=2.6.0",
    "openai>=2.30.0",
    "peewee>=4.0.4",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "python-dotenv>=1.2.2",
    "yfinance>=1.2.1",
]

[project.urls]
Repository = "https://github.com/aluiziolira/mini-agent-telemetry-lab"

[dependency-groups]
dev = [
    "ruff>=0.15.9",
    "mypy>=1.15.0",
    "django-stubs>=5.2.0",
    "djangorestframework-stubs>=3.16.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
strict = true

# Only check high-leverage modules — skip tests, scripts, migrations
files = [
    "core/models.py",
    "core/views.py",
    "core/serializers.py",
    "core/validators.py",
    "core/hooks.py",
    "core/metrics.py",
    "core/tasks.py",
    "core/middleware/request_id.py",
    "core/services/finalization.py",
    "core/services/ingestion.py",
    "core/types.py",
    "core/providers/",
    "sdk/types.py",
    "sdk/tracer.py",
    "sdk/backends/",
]

[[tool.mypy.overrides]]
module = ["huey.*", "huey.contrib.djhuey"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "telemetry_lab.settings"
